
namespace TournamentManagement
{
    public interface IGame
    {
        public IGameResult Result { get; }
    }
}
