
namespace TournamentManagement
{
    public interface IGameResult
    {

    }
}
