
namespace TournamentManagement
{
    public interface IRating
    {
    }
}