
namespace TurnamentManagement
{
    public interface IPlayer
    {
        Guid Id { get; }
        string Name { get; }
    }
}